api with docker db

--- a/src/Customer.Api/appsettings.json
+++ b/src/Customer.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CustomerDB": "Host=localhost;Database=CustomerDB;Username=postgres;Password=12345678"
+    "CustomerDB": "Host=localhost;Database=CustomerDB;Username=postgres;Password=12345678",
+    "DockerConn": "Host=127.0.0.1;Port=5433;Database=customerdb1;Username=postgres;Password=12345678"
   }
 }
