--- a/src/Customer.Api/Customer.Api.csproj
+++ b/src/Customer.Api/Customer.Api.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.5" />
         <PackageReference Include="Dapper" Version="2.1.28" />
         <PackageReference Include="Npgsql" Version="6.0.10" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
